ghc-4335c07/testsuite/tests/parser/should_fail/T8506.hs
module T8506 where

class Shapable Int where

